--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,8 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
-
+h1{
+color:red;
+}
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
